--- a/index.html
+++ b/index.html
@@ -1,4 +1,101 @@
-<script>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Колесо фортуны</title>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <style>
+        body {
+            margin: 0;
+            padding: 16px;
+            background: #2b1b3a;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            box-sizing: border-box;
+            color: white;
+        }
+        h1 {
+            text-align: center;
+            margin: 0 0 20px 0;
+            font-size: 28px;
+            color: #ffd700;
+            text-shadow: 0 2px 4px rgba(0,0,0,0.5);
+        }
+        .wheel-container {
+            position: relative;
+            width: 300px;
+            height: 300px;
+            margin: 20px auto;
+        }
+        canvas {
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.6);
+        }
+        .pointer {
+            position: absolute;
+            top: -15px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 0;
+            height: 0;
+            border-left: 20px solid transparent;
+            border-right: 20px solid transparent;
+            border-top: 40px solid #ff4444;
+            filter: drop-shadow(0 4px 4px rgba(0,0,0,0.3));
+            z-index: 10;
+        }
+        .spin-btn {
+            background: linear-gradient(135deg, #ff8c00, #ff2e00);
+            border: none;
+            color: white;
+            font-size: 24px;
+            font-weight: bold;
+            padding: 16px 48px;
+            border-radius: 50px;
+            margin: 30px 0 20px;
+            box-shadow: 0 8px 0 #b22222, 0 10px 20px rgba(0,0,0,0.3);
+            cursor: pointer;
+            transition: all 0.1s ease;
+            width: 100%;
+            max-width: 300px;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+        }
+        .spin-btn:active {
+            transform: translateY(8px);
+            box-shadow: 0 0 0 #b22222, 0 5px 15px rgba(0,0,0,0.3);
+        }
+        .spin-btn:disabled {
+            opacity: 0.6;
+            transform: translateY(5px);
+            box-shadow: 0 3px 0 #b22222;
+            cursor: not-allowed;
+        }
+        .message {
+            text-align: center;
+            color: #ffd700;
+            font-size: 18px;
+            margin-top: 10px;
+        }
+    </style>
+</head>
+<body>
+    <h1>🎡 Колесо фортуны</h1>
+    <div class="wheel-container">
+        <canvas id="wheelCanvas" width="400" height="400"></canvas>
+        <div class="pointer"></div>
+    </div>
+    <button class="spin-btn" id="spinButton">Крутить!</button>
+    <div class="message" id="statusMessage"></div>
+
+    <script>
     const tg = window.Telegram.WebApp;
     tg.expand();
     tg.MainButton.hide();
@@ -125,3 +222,5 @@
         spinBtn.addEventListener('click', spinWheel);
     }
 </script>
+</body>
+</html>
